# aifsd-data

./: .gitignore  AGENTS.md  README.md  analysis.ipynb  etl.py  pyproject.toml  requirements.txt
data/: sample.csv
data_source/staging/ecommerce/: .part-00000-9a445d8d-7128-4be7-8abc-b0ffc7a34817-c000.snappy.parquet.crc  .part-00001-9a445d8d-7128-4be7-8abc-b0ffc7a34817-c000.snappy.parquet.crc  .part-00002-9a445d8d-7128-4be7-8abc-b0ffc7a34817-c000.snappy.parquet.crc  .part-00003-9a445d8d-7128-4be7-8abc-b0ffc7a34817-c000.snappy.parquet.crc  part-00000-9a445d8d-7128-4be7-8abc-b0ffc7a34817-c000.snappy.parquet  part-00001-9a445d8d-7128-4be7-8abc-b0ffc7a34817-c000.snappy.parquet  part-00002-9a445d8d-7128-4be7-8abc-b0ffc7a34817-c000.snappy.parquet  part-00003-9a445d8d-7128-4be7-8abc-b0ffc7a34817-c000.snappy.parquet
ecom_etl_data.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/: etl_config.py  local_spark.py
src/jobs/: extract.py  load.py  transform.py
src/transforms/: __init__.py  cumulative_discount.py  customer_value.py  dynamic_shipping.py  pipeline.py  time_based.py
tests/: conftest.py  schema_constants.py  spark_helpers.py
tests/jobs/: test_extract.py  test_load.py  test_transforms.py
