[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ecom-etl-data"
version = "0.1.0"
description = "E-commerce Spark ETL workshop pipeline (extract, transform, load)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "setuptools>=69",
    "pyarrow",
    "py4j",
    "pyspark==3.3.4",
    "python-dateutil",
    "pytz",
    "six",
    "tzdata",
    "matplotlib",
    "scipy",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.8",
    "mypy>=1.11",
    "pandas-stubs",
    "ipykernel",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests", "etl.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
packages = ["src"]
explicit_package_bases = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true
